feat: 2차 mvp대로 수정